--- a/templates/index.html
+++ b/templates/index.html
@@ -62,7 +62,7 @@
                                 <li class="nav-item {% ifequal current_screen 'about-us' %} active {% endifequal %}"><a class="page-scroll" href="/about-us">About</a></li>
                                 <li class="nav-item {% ifequal current_screen 'projects' %} active {% endifequal %}"><a class="page-scroll" href="/projects">Projects</a></li>
                                 <li class="nav-item {% ifequal current_screen 'publications' %} active {% endifequal %}" style="width: max-content;"><a class="page-scroll" href="/publications">Publications</a></li>
-                                <li class="nav-item" style="width: max-content;"><a class="page-scroll" href="#blogs">Blogs</a></li>
+                                <li class="nav-item" style="width: max-content;"><a class="page-scroll" href="https://blog.randwalkresearch.com">Blogs</a></li>
                                 <li class="nav-item {% ifequal current_screen 'contact-us' %} active {% endifequal %}"><a class="page-scroll" href="/contact-us">Contact</a></li>
                             </ul>
                         </div>
