--- a/templates/project_detail.html
+++ b/templates/project_detail.html
@@ -20,7 +20,7 @@
                     </div>
                     <!-- container -->
                     <div class="slider-image-box d-none d-lg-flex align-items-end">
-                        <div class="slider-image">
+                        <div class="slider-image" style="padding: 50px;">
                             <img class="detail-image" src="{{project.product_image.url}}" alt="Hero">
                         </div>
                         <!-- slider-imgae -->
@@ -37,7 +37,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <p class="product-detail">{{project.long_description|linebreaksbr}}</p>
+                    <p class="product-detail">{{project.long_description|safe}}</p>
                 </div>
             </div>
         </div>
