--- a/templates/projects.html
+++ b/templates/projects.html
@@ -39,7 +39,7 @@
         <div class="container pb-25">
             <div class="row">
                 <div class="col-lg-4 col-md-12 col-sm-12 mx-auto">
-                    <img src="{{project.product_thumbnail.url}}"/>
+                    <img class="thumbnail-image" src="{{project.product_thumbnail.url}}"/>
                 </div>
                 <div class="col-lg-8 col-md-12 px-50">
                     <h2 class="project-title pt-10 pb-10">{{project.name}}</h2>
