--- a/templates/publications.html
+++ b/templates/publications.html
@@ -32,41 +32,125 @@
 
     </section>
 
-    <section>
-        <div class="container">
+<!--    <section>-->
+<!--        <div class="container">-->
+<!--            <div class="row">-->
+<!--                <div class="col-lg-12">-->
+<!--                    <p class="description">Laborum nostrud velit magna aute tempor nostrud labore aliquip do.-->
+<!--                        Consequat consequat veniam pariatur ea esse qui amet anim do aute do ea id ad.-->
+<!--                        Esse fugiat laboris officia labore ipsum labore deserunt anim ad labore mollit-->
+<!--                        mollit reprehenderit voluptate.</p>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </section>-->
+
+    {% if publications %}
+    <section class="pt-50 px-30">
+        <div class="row justify-content-center ">
+            <div class="col-lg-6 col-md-10 ">
+                <div class="section-title text-center pb-30 ">
+                    <h3 class="title ">Our Publications</h3>
+                    <p class="text ">Stop wasting time and money designing and managing a website that doesn’t get results. Happiness guaranteed!</p>
+                </div>
+                <!-- section title -->
+            </div>
+        </div>
+        {% for publication in publications %}
+        <div class="container pb-25">
             <div class="row">
-                <div class="col-lg-12">
-                    <p class="description">Laborum nostrud velit magna aute tempor nostrud labore aliquip do.
-                        Consequat consequat veniam pariatur ea esse qui amet anim do aute do ea id ad.
-                        Esse fugiat laboris officia labore ipsum labore deserunt anim ad labore mollit
-                        mollit reprehenderit voluptate.</p>
+                <div class="col-lg-4 col-md-12 col-sm-12 mx-auto">
+                    <img class="thumbnail-image" src="{{publication.image.url}}"/>
+                </div>
+                <div class="col-lg-8 col-md-12 px-50">
+                    <h2 class="project-title pt-10 pb-10">{{publication.name}}</h2>
+                     <p class="pt-2 text-justify fs-6">{{publication.description}} </p>
+                    <a class="h6 text-primary pt-3" href="{{publication.link}}">KNOW MORE &#62;&#62;</a>
                 </div>
             </div>
         </div>
+        {% endfor %}
     </section>
+    {% endif %}
 
-<section id="publication" class="team-area pt-120 pb-130 ">
-        <div class="container ">
-            <div class="row justify-content-center">
-                {% for publication in publications %}
-                <div class="col-lg-4 col-sm-6 ">
-                    <div class="team-style-eleven text-center mt-30 wow fadeIn " data-wow-duration="1s " data-wow-delay="0s ">
-                        <div class="team-image ">
-                            <img src="{{publication.image.url}}" alt="Publication">
-                        </div>
-                        <div class="publication-content text-left px-4">
-                            <h4 class="publication-name "><a href="# ">{{publication.name}}</a></h4>
-                            <span class="sub-title pt-10">{{publication.description}}</span>
-                            <a class="h6 text-primary pt-3" href="{{publication.link}}">KNOW MORE &#62;&#62;</a>
-                        </div>
-                    </div>
-                    <!-- single team -->
+    {% if journals %}
+    <section class="pt-50 px-30">
+        <div class="row justify-content-center ">
+            <div class="col-lg-6 col-md-10 ">
+                <div class="section-title text-center pb-30 ">
+                    <h3 class="title ">Our Journals</h3>
+                    <p class="text ">Stop wasting time and money designing and managing a website that doesn’t get results. Happiness guaranteed!</p>
                 </div>
-                {% endfor %}
-
+                <!-- section title -->
             </div>
-            <!-- row -->
         </div>
-        <!-- container -->
+        {% for journal in journals %}
+        <div class="container pb-25">
+            <div class="row">
+                <div class="col-lg-4 col-md-12 col-sm-12 mx-auto">
+                    <img class="thumbnail-image" src="{{journal.image.url}}"/>
+                </div>
+                <div class="col-lg-8 col-md-12 px-50">
+                    <h2 class="project-title pt-10 pb-10">{{journal.name}}</h2>
+                     <p class="pt-2 text-justify fs-6">{{journal.description}} </p>
+                    <a class="h6 text-primary pt-3" href="{{journal.link}}">KNOW MORE &#62;&#62;</a>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
     </section>
+    {% endif %}
+
+    {% if books %}
+    <section class="pt-50 px-30">
+        <div class="row justify-content-center ">
+            <div class="col-lg-6 col-md-10 ">
+                <div class="section-title text-center pb-30 ">
+                    <h3 class="title ">Our Books</h3>
+                    <p class="text ">Stop wasting time and money designing and managing a website that doesn’t get results. Happiness guaranteed!</p>
+                </div>
+                <!-- section title -->
+            </div>
+        </div>
+        {% for book in books %}
+        <div class="container pb-25">
+            <div class="row">
+                <div class="col-lg-4 col-md-12 col-sm-12 mx-auto">
+                    <img class="thumbnail-image" src="{{book.image.url}}"/>
+                </div>
+                <div class="col-lg-8 col-md-12 px-50">
+                    <h2 class="project-title pt-10 pb-10">{{book.name}}</h2>
+                     <p class="pt-2 text-justify fs-6">{{book.description}} </p>
+                    <a class="h6 text-primary pt-3" href="{{book.link}}">KNOW MORE &#62;&#62;</a>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
+    </section>
+    {% endif %}
+
+<!--<section id="publication" class="team-area pt-120 pb-130 ">-->
+<!--        <div class="container ">-->
+<!--            <div class="row justify-content-center">-->
+<!--                {% for publication in publications %}-->
+<!--                <div class="col-lg-4 col-sm-6 ">-->
+<!--                    <div class="team-style-eleven text-center mt-30 wow fadeIn " data-wow-duration="1s " data-wow-delay="0s ">-->
+<!--                        <div class="team-image ">-->
+<!--                            <img src="{{publication.image.url}}" alt="Publication">-->
+<!--                        </div>-->
+<!--                        <div class="publication-content text-left px-4">-->
+<!--                            <h4 class="publication-name "><a href="# ">{{publication.name}}</a></h4>-->
+<!--                            <span class="sub-title pt-10">{{publication.description}}</span>-->
+<!--                            <a class="h6 text-primary pt-3" href="{{publication.link}}">KNOW MORE &#62;&#62;</a>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                    &lt;!&ndash; single team &ndash;&gt;-->
+<!--                </div>-->
+<!--                {% endfor %}-->
+
+<!--            </div>-->
+<!--            &lt;!&ndash; row &ndash;&gt;-->
+<!--        </div>-->
+<!--        &lt;!&ndash; container &ndash;&gt;-->
+<!--    </section>-->
 {% endblock %}
