--- a/templates/about_us.html
+++ b/templates/about_us.html
@@ -36,45 +36,8 @@
     <section>
         <div class="container">
             <div class="row">
-                <div class="col-lg-12">
-                    <p class="description">Laborum nostrud velit magna aute tempor nostrud labore aliquip do.
-                        Consequat consequat veniam pariatur ea esse qui amet anim do aute do ea id ad.
-                        Esse fugiat laboris officia labore ipsum labore deserunt anim ad labore mollit
-                        mollit reprehenderit voluptate.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <p class="text-justify">Laborum nostrud velit magna aute tempor nostrud labore aliquip do.
-                        Consequat consequat veniam pariatur ea esse qui amet anim do aute do ea id ad.
-                        Esse fugiat laboris officia labore ipsum labore deserunt anim ad labore mollit
-                        mollit reprehenderit voluptate. Laborum nostrud velit magna aute tempor nostrud labore aliquip do.
-                        Consequat consequat veniam pariatur ea esse qui amet anim do aute do ea id ad.
-                        Esse fugiat laboris officia labore ipsum labore deserunt anim ad labore mollit
-                        mollit reprehenderit voluptate. Laborum nostrud velit magna aute tempor nostrud labore aliquip do.
-                        Consequat consequat veniam pariatur ea esse qui amet anim do aute do ea id ad.
-                        Esse fugiat laboris officia labore ipsum labore deserunt anim ad labore mollit
-                        mollit reprehenderit voluptate. Laborum nostrud velit magna aute tempor nostrud labore aliquip do.
-                        Consequat consequat veniam pariatur ea esse qui amet anim do aute do ea id ad.
-                        Esse fugiat laboris officia labore ipsum labore deserunt anim ad labore mollit
-                        mollit reprehenderit voluptate. Laborum nostrud velit magna aute tempor nostrud labore aliquip do.
-                        Consequat consequat veniam pariatur ea esse qui amet anim do aute do ea id ad.
-                        Esse fugiat laboris officia labore ipsum labore deserunt anim ad labore mollit
-                        mollit reprehenderit voluptate. <br/> Laborum nostrud velit magna aute tempor nostrud labore aliquip do.
-                        Consequat consequat veniam pariatur ea esse qui amet anim do aute do ea id ad.
-                        Esse fugiat laboris officia labore ipsum labore deserunt anim ad labore mollit
-                        mollit reprehenderit voluptate. Laborum nostrud velit magna aute tempor nostrud labore aliquip do.
-                        Consequat consequat veniam pariatur ea esse qui amet anim do aute do ea id ad.
-                        Esse fugiat laboris officia labore ipsum labore deserunt anim ad labore mollit
-                        mollit reprehenderit voluptate. Laborum nostrud velit magna aute tempor nostrud labore aliquip do.
-                        Consequat consequat veniam pariatur ea esse qui amet anim do aute do ea id ad.
-                        Esse fugiat laboris officia labore ipsum labore deserunt anim ad labore mollit
-                        mollit reprehenderit voluptate.</p>
+                <div class="col-lg-12 mt-80">
+                    <p class="text-justify">As a company under the faculty start up scheme, we strive to turn the outcomes of research in data analysis, machine learning, computer vision, computational finance  and intelligent communication systems into products and services for other organizations and customers. The transformation of mathematical entities and models into end products and services is accomplished with long term research. Nestled in an academic environment, the company strives to project the fruits of research into the benefits of common man.</p>
                 </div>
             </div>
         </div>
