--- a/templates/publications.html
+++ b/templates/publications.html
@@ -51,7 +51,7 @@
             <div class="col-lg-6 col-md-10 ">
                 <div class="section-title text-center pb-30 ">
                     <h3 class="title ">Our Publications</h3>
-                    <p class="text ">Stop wasting time and money designing and managing a website that doesn’t get results. Happiness guaranteed!</p>
+                    <p class="text ">Knowledge and Happiness guaranteed!</p>
                 </div>
                 <!-- section title -->
             </div>
@@ -83,7 +83,7 @@
             <div class="col-lg-6 col-md-10 ">
                 <div class="section-title text-center pb-30 ">
                     <h3 class="title ">Our Journals</h3>
-                    <p class="text ">Stop wasting time and money designing and managing a website that doesn’t get results. Happiness guaranteed!</p>
+                    <p class="text ">Knowledge and Happiness guaranteed!</p>
                 </div>
                 <!-- section title -->
             </div>
@@ -114,7 +114,7 @@
             <div class="col-lg-6 col-md-10 ">
                 <div class="section-title text-center pb-30 ">
                     <h3 class="title ">Our Books</h3>
-                    <p class="text ">Stop wasting time and money designing and managing a website that doesn’t get results. Happiness guaranteed!</p>
+                    <p class="text ">Knowledge and Happiness guaranteed!</p>
                 </div>
                 <!-- section title -->
             </div>
@@ -130,6 +130,27 @@
                      <p class="pt-2 text-justify fs-6">{{book.description}} </p>
                     <a class="h6 text-primary pt-3" href="{{book.link}}">KNOW MORE &#62;&#62;</a>
                 </div>
+            </div>
+        </div>
+        {% endfor %}
+    </section>
+    {% endif %}
+
+    {% if conferences %}
+    <section class="pt-50 px-30">
+        <div class="row justify-content-center ">
+            <div class="col-lg-6 col-md-10 ">
+                <div class="section-title text-center pb-30 ">
+                    <h3 class="title ">Confernces</h3>
+                    <p class="text ">The discussions we had</p>
+                </div>
+                <!-- section title -->
+            </div>
+        </div>
+        {% for conference in conferences %}
+        <div class="container pb-25">
+            <div class="col-12 px-50">
+                <a class="h6 pt-3" href="{{ conference.link }}"><p class="pt-2 text-left fs-6">{{ forloop.counter }}. {{ conference.details }}</p></a>
             </div>
         </div>
         {% endfor %}
