--- a/templates/contact_us.html
+++ b/templates/contact_us.html
@@ -50,7 +50,7 @@
             <div class="row ">
                 <div class="col-lg-12 ">
                     <div class="contact-map mt-30 ">
-                        <iframe id="gmap_canvas " src="https://maps.google.com/maps?q=Mission%20District%2C%20San%20Francisco%2C%20CA%2C%20USA&t=&z=13&ie=UTF8&iwloc=&output=embed " frameborder="0 " scrolling="no " marginheight="0 " marginwidth="0 "></iframe>
+                        <iframe id="gmap_canvas " src="https://maps.google.com/maps?q=Thekkevila+Sub+Post+Office/@8.8787012,76.5995567,14z/data=!4m10!1m2!2m1!1sTRA+130A,+Sowparnika,+Thekkevila+PO,%C2%A0Kollam%C2%A016%3Cbr%3EKerala,+India.!3m6!1s0x3b05fc9945da6f91:0x565a576762e6e0a5!8m2!3d8.8651454!4d76.6136529!15sCkJUUkEgMTMwQSwgU293cGFybmlrYSwgVGhla2tldmlsYSBQTyzCoEtvbGxhbcKgMTY8YnI-S2VyYWxhLCBJbmRpYS6SAQtwb3N0X29mZmljZeABAA!16s%2Fg%2F1hf36frs5?entry=ttu&output=embed " frameborder="0 " scrolling="no " marginheight="0 " marginwidth="0 "></iframe>
                     </div>
                     <!-- row -->
                 </div>
@@ -64,7 +64,7 @@
                                 <i class="lni lni-map-marker "></i>
                             </div>
                             <div class="contact-info-content media-body ">
-                                <p class="text "> 2nd Floor, XYZ building, Chengannur<br>Kerala, India.</p>
+                                <p class="text ">TRA 130A, Sowparnika, Thekkevila PO, Kollam 16<br>Kerala, India.</p>
                             </div>
                         </div>
                         <!-- single contact info -->
@@ -75,8 +75,8 @@
                                 <i class="lni lni-envelope "></i>
                             </div>
                             <div class="contact-info-content media-body ">
-                                <p class="text ">hello@randwalk.com</p>
-                                <p class="text ">support@randwalk.com</p>
+                                <p class="text ">hello@randwalkresearch.com</p>
+                                <p class="text ">support@randwalkresearch.com</p>
                             </div>
                         </div>
                         <!-- single contact info -->
@@ -97,57 +97,80 @@
                 <!-- row -->
             </div>
             <!-- contact info -->
-            <div class="row ">
-                <div class="col-lg-12 ">
-                    <div class="contact-wrapper form-style-two pt-115 ">
-                        <h4 class="contact-title pb-10 "><i class="lni lni-envelope "></i> Leave <span>A Message.</span></h4>
+<!--            <div class="row ">-->
+<!--                <div class="col-lg-12 ">-->
+<!--                    <div class="contact-wrapper form-style-two pt-115 ">-->
+<!--                        <h4 class="contact-title pb-10 "><i class="lni lni-envelope "></i> Leave <span>A Message.</span></h4>-->
 
-                        <form id="contact-form " action="assets/contact.php " method="post ">
-                            <div class="row ">
-                                <div class="col-md-6 ">
-                                    <div class="form-input mt-25 ">
-                                        <label>Name</label>
-                                        <div class="input-items default ">
-                                            <input name="name " type="text " placeholder="Name ">
-                                            <i class="lni lni-user "></i>
-                                        </div>
-                                    </div>
-                                    <!-- form input -->
-                                </div>
-                                <div class="col-md-6 ">
-                                    <div class="form-input mt-25 ">
-                                        <label>Email</label>
-                                        <div class="input-items default ">
-                                            <input type="email " name="email " placeholder="Email ">
-                                            <i class="lni lni-envelope "></i>
-                                        </div>
-                                    </div>
-                                    <!-- form input -->
-                                </div>
-                                <div class="col-md-12 ">
-                                    <div class="form-input mt-25 ">
-                                        <label>Message</label>
-                                        <div class="input-items default ">
-                                            <textarea name="massage " placeholder="Message "></textarea>
-                                            <i class="lni lni-pencil-alt "></i>
-                                        </div>
-                                    </div>
-                                    <!-- form input -->
-                                </div>
-                                <p class="form-message "></p>
-                                <div class="col-md-12 ">
-                                    <div class="form-input light-rounded-buttons mt-30 ">
-                                        <button class="main-btn light-rounded-two ">Send Message</button>
-                                    </div>
-                                    <!-- form input -->
-                                </div>
-                            </div>
-                            <!-- row -->
-                        </form>
-                    </div>
-                    <!-- contact wrapper form -->
-                </div>
-            </div>
+<!--                        <form id="contact-form " action="send-message" method="POST">-->
+<!--                            {% csrf_token %}-->
+
+<!--                            {{form.errors}}-->
+<!--                            <div class="row ">-->
+<!--                                <div class="col-md-6 ">-->
+<!--                                    <div class="form-input mt-25 ">-->
+<!--                                        <label>{{form.name.label_tag}}</label>-->
+<!--                                        <div class="input-items default ">-->
+<!--                                            {{form.name}}-->
+<!--                                            <i class="lni lni-user "></i>-->
+<!--                                        </div>-->
+<!--                                    </div>-->
+<!--                                    &lt;!&ndash; form input &ndash;&gt;-->
+<!--                                </div>-->
+<!--                                <div class="col-md-6 ">-->
+<!--                                    <div class="form-input mt-25 ">-->
+<!--                                        <label>{{form.email.label_tag}}</label>-->
+<!--                                        <div class="input-items default ">-->
+<!--                                            {{form.email}}-->
+<!--                                            <i class="lni lni-envelope "></i>-->
+<!--                                        </div>-->
+<!--                                    </div>-->
+<!--                                    &lt;!&ndash; form input &ndash;&gt;-->
+<!--                                </div>-->
+<!--                                <div class="col-md-6 ">-->
+<!--                                    <div class="form-input mt-25 ">-->
+<!--                                        <label>{{form.phone.label_tag}}</label>-->
+<!--                                        <div class="input-items default ">-->
+<!--                                            {{form.phone}}-->
+<!--                                            <i class="lni lni-phone "></i>-->
+<!--                                        </div>-->
+<!--                                    </div>-->
+<!--                                    &lt;!&ndash; form input &ndash;&gt;-->
+<!--                                </div>-->
+<!--                                <div class="col-md-6 ">-->
+<!--                                    <div class="form-input mt-25 ">-->
+<!--                                        <label>{{form.subject.label_tag}}</label>-->
+<!--                                        <div class="input-items default ">-->
+<!--                                            {{form.subject}}-->
+<!--                                            <i class="lni lni-bookmark "></i>-->
+<!--                                        </div>-->
+<!--                                    </div>-->
+<!--                                    &lt;!&ndash; form input &ndash;&gt;-->
+<!--                                </div>-->
+<!--                                <div class="col-md-12 ">-->
+<!--                                    <div class="form-input mt-25 ">-->
+<!--                                        <label>{{form.message.label_tag}}</label>-->
+<!--                                        <div class="input-items default ">-->
+<!--                                            {{form.message}}-->
+<!--                                            <i class="lni lni-pencil-alt "></i>-->
+<!--                                        </div>-->
+<!--                                    </div>-->
+<!--                                    &lt;!&ndash; form input &ndash;&gt;-->
+<!--                                </div>-->
+<!--                                <p class="form-message"></p>-->
+<!--                                <div class="col-md-12 ">-->
+<!--                                    <div class="form-input light-rounded-buttons mt-30 ">-->
+<!--                                        <button class="main-btn light-rounded-two">Send Message</button>-->
+<!--                                    </div>-->
+<!--                                    &lt;!&ndash; form input &ndash;&gt;-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                            &lt;!&ndash; row &ndash;&gt;-->
+<!--                        </form>-->
+<!--                    </div>-->
+<!--                    &lt;!&ndash; contact wrapper form &ndash;&gt;-->
+<!--                </div>-->
+<!--            </div>-->
             <!-- row -->
         </div>
         <!-- container -->
