--- a/templates/projects.html
+++ b/templates/projects.html
@@ -21,18 +21,18 @@
             </div>
     </section>
 
-    <section>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <p class="description">Laborum nostrud velit magna aute tempor nostrud labore aliquip do.
-                        Consequat consequat veniam pariatur ea esse qui amet anim do aute do ea id ad.
-                        Esse fugiat laboris officia labore ipsum labore deserunt anim ad labore mollit
-                        mollit reprehenderit voluptate.</p>
-                </div>
-            </div>
-        </div>
-    </section>
+<!--    <section>-->
+<!--        <div class="container">-->
+<!--            <div class="row">-->
+<!--                <div class="col-lg-12">-->
+<!--                    <p class="description">Laborum nostrud velit magna aute tempor nostrud labore aliquip do.-->
+<!--                        Consequat consequat veniam pariatur ea esse qui amet anim do aute do ea id ad.-->
+<!--                        Esse fugiat laboris officia labore ipsum labore deserunt anim ad labore mollit-->
+<!--                        mollit reprehenderit voluptate.</p>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </section>-->
 
     <section>
         {% for project in projects %}
